	  Which fixes bugs: https://rt.cpan.org/Ticket/Display.html?id=42305
	  and https://rt.cpan.org/Ticket/Display.html?id=42306

	- Memory leak fixes in XS.

	- Patch from Nick for https://rt.cpan.org/Ticket/Display.html?id=44930
	  Allows PP only version.

	- Patch from Nick for https://rt.cpan.org/Ticket/Display.html?id=44943
	  _parseStreamInfo - Fix incorrect decoding of metadata

2.3  Sat Nov  8 15:36:38 PST 2008
	- Patch from Nick Hall to fix allpictures XS & Debian crash.

2.2  Sat May 17 00:42:06 PDT 2008
	- Patches from Nick Hall to allow allpictures XS partity & multiple ID3 tag fixes
	- RT #36000 - Don't add vendor string, or change case of tags.
	- RT #36048 - Segfault if FLAC file doesn't contain VENDOR tag.

2.1  Sat May 17 00:42:06 PDT 2008
	- Try and abort cpansmoke before it sends me email.

2.0  Sat Feb 23 13:32:54 PST 2008
	- RT #32691: Picture $type incorrectly defaults to 3 for valid input 0 - "Other"
	- RT #32631: t/pod-coverage.t fails with Pod::Coverage 0.19
	- RT #32693: Will not retrieve multiple pictures of the same picture type
	- RT #32630: Test failure on several architectures (64-bit problems) XS
	- Fixed compile warnings.

1.9  Sun Dec 2  09:44:22 PST 2007
	- Fix Test::Pod::Coverage usage.
	- XS: RT #30532 - Bug when writing tags when only two tags are left

1.8  Thu Jul 26 14:02:51 PDT 2007

        - XS: Fix reading MD5 when leading with 00. Add tests.
        - Update Documentation to reflect return value reality.

1.7  Fri Jan  5 15:50:46 PST 2007

	- XS: RT #15415 - use the block length when storing the application block.
	- Add POD & POD Coverage tests.
	- Fix META.yml
	- Use Module::Install

1.6  Thu Jan  4 19:09:35 PST 2007

	- Remove extraneous debugging

1.5  Thu Jan  4 14:44:37 PST 2007

	- PP: Large refactor to improve performance. Only parse blocks we encounter.
	- PP: Don't parse the SEEKTABLE block as it's really slow and not that useful.
	- PP & XS: Parse the PICTURE metadata block from FLAC 1.1.3