@@ -13,6 +13,11 @@ Revision history for Perl extension Audio::FLAC.
 	- Patch from Nick for https://rt.cpan.org/Ticket/Display.html?id=44943
 	  _parseStreamInfo - Fix incorrect decoding of metadata
 
+	- Better (hopefully) handling of VENDOR string.
+	  * Add set_vendor_string method.
+	  * Write out vendor string in XS.
+	  * Don't hardcode vendor string on read in XS.
+
 2.3  Sat Nov  8 15:36:38 PST 2008
 	- Patch from Nick Hall to fix allpictures XS & Debian crash.
 
